plugins {
    id 'java'
}

sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}


group 'com.zeydie'
version '0.2.3.1A'

repositories {
    mavenCentral()

    flatDir {
        dirs 'libs'
    }
}

dependencies {
    // https://mvnrepository.com/artifact/com.github.pengrad/java-telegram-bot-api
    implementation group: 'com.github.pengrad', name: 'java-telegram-bot-api', version: '6.9.1'
    // https://mvnrepository.com/artifact/com.squareup.okio/okio-jvm
    runtimeOnly group: 'com.squareup.okio', name: 'okio-jvm', version: '3.6.0'

    // https://github.com/ZeyDie/Simple-GSON
    implementation group: 'com.zeydie', name: 'SGson', version: '2.9.x-1.1'

    // https://mvnrepository.com/artifact/org.atteo.classindex/classindex
    implementation group: 'org.atteo.classindex', name: 'classindex', version: '3.13'
    annotationProcessor group: 'org.atteo.classindex', name: 'classindex', version: '3.13'

    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '33.0.0-jre'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.22.0'
    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.22.0'

    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation group: 'org.jetbrains', name: 'annotations', version: '24.1.0'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.30'

    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
    testImplementation group: 'org.openjdk.jmh', name: 'jmh-core', version: '1.37'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
}

jar {
    def librariesFolder = "libraries"

    configurations.runtimeClasspath.collect {
        def path = it.getAbsolutePath();

        copy  {
            from path
            into "$buildDir/libs/$librariesFolder"
        }
    }

    manifest {
        attributes(
                "Class-Path": configurations.runtimeClasspath.collect { "$librariesFolder/" + it.getName() }.join(' ')
        )
    }
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}